--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "electron": "^2.0.4",
     "register-service-worker": "^1.0.0",
+    "requirejs": "^2.3.5",
     "vue": "^2.5.16",
+    "vue-media-queries": "0.0.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -19,7 +24,8 @@
     "@vue/cli-service": "^3.0.0-beta.11",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.15.1"
   },
   "eslintConfig": {
     "root": true,
