--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "electron": "^2.0.4",
-    "register-service-worker": "^1.0.0",
+    "electron": "^2.0.5",
+    "register-service-worker": "^1.4.1",
     "requirejs": "^2.3.5",
     "vue": "^2.5.16",
     "vue-media-queries": "0.0.3",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.11",
-    "@vue/cli-plugin-pwa": "^3.0.0-beta.11",
-    "@vue/cli-service": "^3.0.0-beta.11",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.5",
+    "@vue/cli-plugin-pwa": "^3.0.0-rc.5",
+    "@vue/cli-service": "^3.0.0-rc.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.15.1"
+    "webpack": "^4.16.1"
   },
   "eslintConfig": {
     "root": true,
