--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "electron": "^2.0.5",
+    "jquery": "^3.3.1",
     "register-service-worker": "^1.4.1",
     "requirejs": "^2.3.5",
     "vue": "^2.5.16",
